--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -22,6 +22,7 @@
     "@eva-design/eva": "2.1.1",
     "@react-native-async-storage/async-storage": "1.15.7",
     "@react-native-community/cli": "4.10.1",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.9",
     "@react-native-community/progress-bar-android": "1.0.4",
     "@react-native-community/progress-view": "1.3.1",
