--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -24,6 +24,7 @@
     "@react-native-community/cli": "4.10.1",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.9",
+    "@react-native-community/netinfo": "^8.0.0",
     "@react-native-community/progress-bar-android": "1.0.4",
     "@react-native-community/progress-view": "1.3.1",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
