--- a/Backend/publish/appsettings.json
+++ b/Backend/publish/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=socialiddb.mysql.database.azure.com; Port=3306; Database=diamonddb; Uid=mcaninci@socialiddb; Pwd=Mehmet92; SslMode=None;"
-   
+    "DefaultConnection": "Server=localhost;UserID=root;Password=;Database=diamonddb;Port=3306;SslMode=None;",
 
 
 
