--- a/Backend/DevTeam.Framework/DevTeam.Framework.csproj
+++ b/Backend/DevTeam.Framework/DevTeam.Framework.csproj
@@ -1,12 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Dapper.SimpleCRUD" Version="2.3.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.26" />
+    <PackageReference Include="Dapper.SimpleCRUD" Version="2.3.0"/>
+    <PackageReference Include="MySql.Data" Version="8.0.26"/>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.0"/>
   </ItemGroup>
-
 </Project>
