--- a/Backend/Mobile.ApiGateway/Mobile.ApiGateway.csproj
+++ b/Backend/Mobile.ApiGateway/Mobile.ApiGateway.csproj
@@ -1,26 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.90" />
-    <PackageReference Include="Dapper.Mapper" Version="2.0.0" />
-    <PackageReference Include="Dapper.SimpleCRUD" Version="2.3.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
-    <PackageReference Include="MySql.Data" Version="8.0.26" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
+    <PackageReference Include="Dapper" Version="2.0.90"/>
+    <PackageReference Include="Dapper.Mapper" Version="2.0.0"/>
+    <PackageReference Include="Dapper.SimpleCRUD" Version="2.3.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11"/>
+    <PackageReference Include="MySql.Data" Version="8.0.26"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
+    <PackageReference Include="Swashbuckle.Core" Version="5.6.0"/>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1108.44"/>
+    <PackageReference Include="Selenium.Support" Version="4.0.1"/>
+    <PackageReference Include="Selenium.Chrome.WebDriver" Version="84.0.0"/>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0"/>
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="DataContexts\" />
+    <Folder Include="DataContexts\"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\DevTeam.Framework\DevTeam.Framework.csproj" />
+    <ProjectReference Include="..\DevTeam.Framework\DevTeam.Framework.csproj"/>
   </ItemGroup>
-
-
 </Project>
