--- a/Backend/Mobile.ApiGateway/Mobile.ApiGateway.csproj
+++ b/Backend/Mobile.ApiGateway/Mobile.ApiGateway.csproj
@@ -12,6 +12,14 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="Web.Screenshot" Version="1.0.0.1" />
+    <PackageReference Include="Noksa.WebDriver.ScreenshotsExtensions" Version="0.1.5.4" />
+  <PackageReference Include="Selenium.Support" Version="3.141.0" />
+<PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+<PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="3.12.0" />
+<PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+<PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="*" />
+<PackageReference Include="Selenium.Firefox.WebDriver" Version="0.17.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DataContexts\" />
